--- a/9.2.0.Tinkercad.md
+++ b/9.2.0.Tinkercad.md
@@ -1,4 +1,4 @@
-## [TinkerCad.com](https://www.tinkercad.com/)
+## [TinkerCad](https://www.tinkercad.com/)
 
 ![](./images/tinkercad.png)
 
@@ -25,7 +25,7 @@ Utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta 
 
 ## Interface
 
-Creación de piezas y movimiento del punto de vista
+Vamos a familiarizarnos con el proceso de creación de piezas y movimiento del punto de vista. Como ocurre con la mayoría de herramientas de diseño, y sobre todo, con las de diseño 3D, es más fácil usarlas si disponemos de un ratón. Casi todo se puede hacer con el trackpad de los portátiles y el teclado, pero resulta más sencillo e intuitivo con ratón.
 
 [![Vídeo: 2. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://img.youtube.com/vi/MdqyZvXOxDU/0.jpg)](https://drive.google.com/file/d/1ZihlMHPM34beEJcGQhUgReaog3JDfdz_/view?usp=sharing)
 
@@ -49,11 +49,15 @@ A la derecha encontramos las paletas de primitivas:
 
 ### Propiedades de un diseño
 
+En cualquier momento podemos cambiar las propiedades de un diseño, como su nombre y también si queremos compartirlo, es decir si lo hacemos público o privado.
+
 [![Video: 4. Propiedades de un diseño](https://img.youtube.com/vi/-uj2iGIRV38/0.jpg)](https://drive.google.com/file/d/1cBk0I7zdudxTM0j3HgJKdoz-nK02bocn/view?usp=sharing)
 
 [Video: 4. Propiedades de un diseño](https://drive.google.com/file/d/1cBk0I7zdudxTM0j3HgJKdoz-nK02bocn/view?usp=sharing)
 
 ### Giros y rotaciones
+
+Vamos a ver cómo podemos modificar la posición de una pieza mediante giros y rotaciones.
 
 [![Video: 5 Giros y rotaciones](https://img.youtube.com/vi/pb2iHcSGiQU/0.jpg)](https://drive.google.com/file/d/1Z1YQ0bZRSdEIl9aSInAokpPQ0HU6A36a/view?usp=sharing)
 
@@ -131,6 +135,8 @@ Cuando ya tenemos la imagen
 
 ### Ejemplo completo: Diseñando un clon del personaje de Among Us
 
+Vamos a hacer un sencillo diseño de un conocido personaje a partir de las técnicas que hemos aprendido hasta ahora.
+
 [![Video: 16. Diseño de un clon de Among Us](https://img.youtube.com/vi/1BXxVjlM5y0/0.jpg)](https://drive.google.com/file/d/1oEkljypXH0uvzGGhi8uXANygH72-USHR/view?usp=sharing)
 
 ### Resumen de funcionalidad
@@ -162,13 +168,13 @@ Cuando ya tenemos la imagen
 ### Teclas
 
 
-* Ctrl + C, Ctrl + V Copy and paste
-* Ctrl + Z, Ctrl + Y Undo and redo your last step(s)
-* Ctrl + D Duplicate the selected object(s)
-* Ctrl + H Hide the selected object(s)
-* Ctrl + Shift + H Show all hidden objects
-* Ctrl + G Group the selected objects into one shape
-* Ctrl + Shift + G Separate a shape into the single objects
-* L Opens the align tool
-* M Takes you to the mirror tool
+* Ctrl + C, Ctrl + V Copiar y Pegar
+* Ctrl + Z, Ctrl + Y Deshacer y rehacer (los últimos pasos)
+* Ctrl + D Duplicar el objeto seleccionado (también vuelve a realizar el último movimiento, por ejemplo si lo hemos desplazado)
+* Ctrl + H Oculta la selección actual
+* Ctrl + Shift + H Muestra todos los objetos ocutados
+* Ctrl + G Agrupa los objetos seleccionados en una única forma
+* Ctrl + Shift + G Separa (des-agrupa) el objeto seleccionado en sus componentes
+* L Abre la herramienta de alineación
+* M Abre la herramienta de Espejo
 
