--- a/9.2.0.Tinkercad.md
+++ b/9.2.0.Tinkercad.md
@@ -172,7 +172,7 @@ Vamos a hacer un sencillo diseño de un conocido personaje a partir de las técn
 * Ctrl + Z, Ctrl + Y Deshacer y rehacer (los últimos pasos)
 * Ctrl + D Duplicar el objeto seleccionado (también vuelve a realizar el último movimiento, por ejemplo si lo hemos desplazado)
 * Ctrl + H Oculta la selección actual
-* Ctrl + Shift + H Muestra todos los objetos ocutados
+* Ctrl + Shift + H Muestra todos los objetos ocultos
 * Ctrl + G Agrupa los objetos seleccionados en una única forma
 * Ctrl + Shift + G Separa (des-agrupa) el objeto seleccionado en sus componentes
 * L Abre la herramienta de alineación
