--- a/9.3.Freecad.md
+++ b/9.3.Freecad.md
@@ -2,7 +2,7 @@
 
 [FreeCad](http://www.freecadweb.org/) es una herramienta opensource de diseño semiprofesional orientada a la creación de diseños mecánicos e industriales. No llega a tener la funcionalidad de los software profesionales, pero cada vez es más potente.
 
-![freecad](http://jeromeabel.net/files/ressources/democratie-industrielle/bonus-images/fab/FreeCAD_aeroponic_system.jpg)
+![[Ejemplo_freecad.png]]
 
 * Diferentes Vistas
   * Part
@@ -18,7 +18,7 @@
 * Operadores lógicos
 * Achaflanados, redondeados, ...
 
-[Videotutoriales (40)](https://youtu.be/2_DbFzFV9D4?feature=shared)
+Existen muchos tutoriales sobre la herramientas, por ejemplos estos [Videotutoriales (40) del gran ObiJuan](https://youtu.be/2_DbFzFV9D4?feature=shared)
 
 ### Ejemplos sencillos
 
