--- a/9.4.Blender.md
+++ b/9.4.Blender.md
@@ -4,7 +4,7 @@ Blender es un software profesional de diseño orgánico muy usado en la industri
 
 ![Ejemplo de diseño con Blender](https://www.blender.org/wp-content/uploads/2016/09/blender_278_splash_hires.jpg)
 
-La instalación es muy sencilla, pudiendo descargar desde su [página de descarga](https://www.blender.org/download/)
+La instalación es muy sencilla, pudiendo descargarse desde su [página de descarga](https://www.blender.org/download/)
 
 Es un software bastante complejo de usar y muy potente con lo que para hacer algo sencillo vas a necesitar ver algunos tutoriales. 
 
@@ -160,5 +160,5 @@ Pulsamos N para ver propiedades y en Imágenes de fondo marcamos cada una de las
 ![](./images/blender-infographic-1280-SM.png)
 
 
-[Tutoriales](https://www.blender.org/support/tutorials/)
+Más [Tutoriales](https://www.blender.org/support/tutorials/)
 
