--- a/9.5.SketchUp.md
+++ b/9.5.SketchUp.md
@@ -39,6 +39,4 @@ Es una herramienta 2D que permite "levantar" los dibujos
 * Hacer zócalos
 * Añadir mobiliario
 
-
-
-[Diseñar para imprimir con SketchUp](https://i.materialise.com/blog/3d-printing-with-sketchup/)
+SketchUp es un software de diseño 3D, pero no está pensado para crear piezas imprimibles, por ello es recomendable que te asegures de que tu diseño es imprimible. Puedes ver cómo hacerlo con este tutorial [Diseñar para imprimir con SketchUp](https://i.materialise.com/blog/3d-printing-with-sketchup/)
