--- a/9.9.Fusion360.md
+++ b/9.9.Fusion360.md
@@ -12,11 +12,11 @@ Es el paso natural desde tinkercad
 
 * Hay que instalar la aplicación en local y hay versiones para Windows y MacOS
 * Necesitas una cuenta de autodesk y puedes usar la misma de tinkercad 
-* Por tener liciencia educativa puedes crear equipos
+* Por tener licencia educativa puedes crear equipos
 * Almacena los datos en la nube 
 
 
-### Tutoriales
+### Tutoriales
 
 [breve tutorial](https://bitfab.io/es/blog/fusion-360-impresion-3d/)
 
