--- a/9.6.BlockScad.md
+++ b/9.6.BlockScad.md
@@ -12,4 +12,4 @@ Tras la aparente simplicidad de los bloques permite hacer diseños muy complejos
 
 [Tutoriales](https://www.blockscad3d.com/edu/lessons/)
 
-[Recuraos para profesores](https://www.blockscad3d.com/edu/resources/)
+[Recursos para profesores](https://www.blockscad3d.com/edu/resources/)
