--- a/9.3.Freecad.md
+++ b/9.3.Freecad.md
@@ -2,7 +2,7 @@
 
 [FreeCad](http://www.freecadweb.org/) es una herramienta opensource de diseño semiprofesional orientada a la creación de diseños mecánicos e industriales. No llega a tener la funcionalidad de los software profesionales, pero cada vez es más potente.
 
-![[Ejemplo_freecad.png]]
+![Ejmplo freecad](./images/Ejemplo_freecad.png)
 
 * Diferentes Vistas
   * Part
