--- a/9.3.Freecad.md
+++ b/9.3.Freecad.md
@@ -1,6 +1,6 @@
-## FreeCad.md
+## FreeCad
 
-[FreeCad](http://www.freecadweb.org/) es una herramienta opensource de diseño semiprofesional orientada a la creación de diseños mecánicos e industriales. No llega a tener la funcionalidad de los software profesionales, pero cada vez es más potente.
+[FreeCAD](http://www.freecadweb.org/) es una herramienta opensource de diseño semiprofesional orientada a la creación de diseños mecánicos e industriales. No llega a tener la funcionalidad de los software profesionales, pero cada vez es más potente.
 
 ![Ejmplo freecad](./images/Ejemplo_freecad.png)
 
