--- a/5.0.0.UsoImpresoras3D.md
+++ b/5.0.0.UsoImpresoras3D.md
@@ -16,6 +16,7 @@ En la parte práctica veremos cómo hacerlo en 3 impresoras distintas:
 * Prusa I3 clónica
 * Creality Ender 3 v2
 * Kingroom KP3S
+* Bambulab A1 Mini
 
 ### Menús
 
