--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -1,16 +1,18 @@
 # Comprar una impresora
 
-El mundo de la impresora 3D como todo de la tecnología ha cambiado mucho en los últimos tiempos el año pasado aparecieron impresora mucho más autónoma a un precio bastante reducido y que permiten imprimir desde el móvil modelo que ya están preparados y directamente para ser impreso eso sí dependemos completamente del fabricante en todos los aspectos son modelos seleccionados personalizado y adaptado para su propia impresora y que con ello consigue una mayor calidad y facilidad de uso
+El mundo de las impresoras 3D, como todo lo relacionado con la tecnología, ha cambiado mucho en los últimos tiempos. Desde hace muy poco existen impresoras mucho más autónomas y a un precio bastante reducido, que ya nos permiten imprimir directamente desde el móvil modelos que ya están preparados ser impresos. 
 
-Por un lado ganamos en facilidad y por otro lado perdemos el posibilidades y versatilidad de uso
+Eso sí, dependemos completamente del fabricante en todos los aspectos.CSon modelos seleccionados, personalizados y adaptados a su propias impresora. Con ello consiguen una mayor calidad y facilidad de uso.
 
-Si eres el afortunado poseedor de una impresora para mular o una creality X1 o K1 está de suerte para poder hacer vas a poder imprimir con mucha más facilidad los modelos que estos fabricantes seleccione
+Por un lado ganamos en facilidad y por otro lado perdemos en posibilidades y versatilidad de uso.
 
-Pero si quieres tú elegir los modelos elegir la calidad por realizar el proceso manualmente porque de lo que se trata es de aprender a hacerlo tú mismo no que te lo hagas el fabricante va a necesitar los contenidos de este curso
+Si eres el afortunado poseedor de una impresora Bambulab o una creality  K1 estás de suerte porque vas a poder imprimir con mucha más facilidad los modelos que estos fabricantes seleccionen.
 
-Aunque tu impresora estén entre estas más modernas te recomiendo que al menos revise los materiales para hacer el proceso manualmente por si llega un momento en el que necesita imprimir algo que el fabricante no ha pensado y quiere imprimir
+Pero si tú quieres elegir los modelos, elegir la calidad o realizar manualmente  el proceso,  porque de lo que se trata es de aprender a hacerlo tú mismo, no que te lo haga el fabricante, vas a necesitar los contenidos de este curso.
 
-El proceso en esta impresora automática sigue siendo el mismo salvo que gran parte ya lo ha realizado el fabricante por ti
+Aunque tu impresora estén entre estas más modernas, te recomiendo que al menos revises los materiales, para aprender a hacer el proceso manualmente, por si llega un momento en el que necesitas imprimir algo que el fabricante no ha pensado y no quiere imprimir.
+
+El proceso en esta impresora automática sigue siendo el mismo salvo que gran parte ya lo ha realizado el fabricante por ti.
 
 Seguro que en lo que dura el curso aparecerán nuevos modelos... y esta guía estará aún más desfasada, espero que al menos te sirva como referencia.
 ## ¿Qué impresora comprar?
