--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -59,7 +59,7 @@ Se trata de impresora de batalla, capaz de imprimir durante bastantes horas con 
 
 ## Kingroon Kp3S
 
-![[kingroon_kp3S.png]]
+![](./images/kingroon_kp3S.png)
 
 Se trata de una impresora compacta, de tamaño aceptable y con una buena área de impresión 180x180, con un "semi" extrusor directo que nos va a evitar tema de atascos si estamos empezando.
 
@@ -82,12 +82,14 @@ La marca Artillery nos propone en este modelo una impresora muy completa, muy bi
 ## Anycubics i3 Mega
 
 ![Anycubics i3 Mega](./images/Anycubics_i3_Mega.jpg)
+
 La marca Anycubic produce una impresora de gran calidad que se montan muy rápido y con las que se consigue una impresión muy estable.
 
-## Creality Ender 3 V3 SE**
+## **Creality Ender 3 V3 SE**
+
 La Ender 3 V3 SE es una opción económica y sencilla para principiantes que buscan iniciarse en la impresión 3D sin complicaciones. Su nivelación automática y extrusor directo permiten imprimir con materiales flexibles como TPU con facilidad.
 
-![[Creality_Ender_3_V3_SE.png]]
+![](./images/Creality_Ender_3_V3_SE.png)
 
 - *Ideal para*: Usuarios nuevos en impresión.
 - *Limitaciones*: Velocidad máxima moderada (250 mm/s).
@@ -95,14 +97,17 @@ La Ender 3 V3 SE es una opción económica y sencilla para principiantes que bus
 ## **Creality Ender 3 S1**
 
 Este modelo mejora la serie Ender con un extrusor directo avanzado y una cama más grande (270 mm de altura). Es perfecta para quienes buscan calidad sin gastar demasiado.
-![[Creality_ender_3_S1.png]]
+
+![](./images/Creality_ender_3_S1.png)
+
 - *Ideal para*: Usuarios intermedios que imprimen con materiales técnicos.
 - *Limitaciones*: Precio ligeramente superior al promedio.
 
 ## **Voxelab Aquila D1**
 
 La Aquila D1 ofrece un equilibrio entre precio y prestaciones con nivelación automática precisa y compatibilidad con filamentos comunes como PLA y PETG.
-![[Voxelab_Aquila_D1.png]]
+![](./images/Voxelab_Aquila_D1.png)
+
 - *Ideal para*: Usuarios domésticos con presupuesto ajustado.
 - *Limitaciones*: Menor velocidad comparada con otras opciones.
 
@@ -110,14 +115,16 @@ La Aquila D1 ofrece un equilibrio entre precio y prestaciones con nivelación au
 
 Este modelo destaca por su velocidad de impresión (300 mm/s) y facilidad de configuración gracias a su sistema de auto-nivelación avanzado.
 
-![[Anycubic_cobra.png]]
+![](./images/Anycubic_cobra.png)
+
 - *Ideal para*: Usuarios que valoran rapidez y calidad.
 - *Limitaciones*: Volumen limitado frente a otras impresoras similares.
 
 ## **Bambu Lab A1 Mini**
 
 La A1 Mini es una impresora compacta diseñada para usuarios que priorizan velocidad (500 mm/s) y facilidad de uso en espacios pequeños.
-![[BambuLab_A1_mini.png]]
+![](./images/BambuLab_A1_mini.png)
+
 - *Ideal para*: Proyectos pequeños o usuarios principiantes.
 - *Limitaciones*: Volumen reducido; no apta para piezas grandes.
 
@@ -175,7 +182,7 @@ Cada modelo tiene ventajas únicas que se adaptan a diferentes perfiles de usuar
 
 ## Calidad profesional
 
-## Comparativa de impresoras 3D profesionales: Prusa Core One, Creality K1, Bambu Lab P1P y más
+
 
 Las impresoras 3D profesionales han evolucionado para ofrecer una combinación de velocidad, precisión y versatilidad en materiales. En este artículo, comparamos algunas de las mejores opciones disponibles en el mercado, incluyendo la **Prusa Core One**, la **Creality K1**, la **Bambu Lab P1P**, y otras competidoras destacadas.
 
@@ -183,7 +190,7 @@ Las impresoras 3D profesionales han evolucionado para ofrecer una combinación d
 
 ### **1. Prusa Core One**
 
-![[Prusa_core_one.png]]
+![](./images/Prusa_core_one.png)
 
 **Características principales**:
 - **Volumen de impresión**: 250 × 220 × 270 mm.
@@ -205,7 +212,7 @@ Las impresoras 3D profesionales han evolucionado para ofrecer una combinación d
 
 ### **2. Bambu Lab P1P**
 
-![[Bambu_lab_P1P.png]]
+![](./images/Bambu_lab_P1P.png)
 
 **Características principales**:
 - **Volumen de impresión**: 256 × 256 × 256 mm.
@@ -227,7 +234,7 @@ Las impresoras 3D profesionales han evolucionado para ofrecer una combinación d
 
 ### **3. Creality K1**
 
-![[Creality_K1.png]]
+![](./images/Creality_K1.png)
 
 **Características principales**:
 - **Volumen de impresión**: 220 × 220 × 250 mm.
@@ -249,7 +256,7 @@ Las impresoras 3D profesionales han evolucionado para ofrecer una combinación d
 
 ### **4. Anycubic Kobra Max**
 
-![[AnyCubic_Cobra_Max.png]]
+![](./images/AnyCubic_Cobra_Max.png)
 
 Aunque no es estrictamente una impresora profesional, la Anycubic Kobra Max destaca por su gran volumen de impresión (400 × 400 × 450 mm), siendo ideal para proyectos grandes.
 
